# house_price_predictor

./: DataPreprocessing.py  DatabaseConnection.py  KmeansAnalysis.py  Main.bat  MccoreHousePredict.py  README.md  RegressionPrediction.py  install.bat  requirements.txt  setup.cfg
UI/: Login.py  MainWindow.py
misc/: info.txt
tests/: RunningTestsReadme  test_DataPreprocessing.py  test_DatabaseConnection.py  test_KmeansAnalysis.py  test_RegressionPrediction.py
