[metadata]
name = mccore_house_price_predictor
version = 0.0.1
author = sjpaige
description = A student project that uses a user interface to deliver some machine learning data analysis.
long_description = file: README.md
long_description_content_type = text/markdown
url =
classifiers =
    Programming Language :: Python :: 3
    License :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.7

[options.packages.find]
where = src
